# anime-search-api

./: Cargo.toml  Dockerfile  LICENSE  README.md  env.example
.github/workflows/: release.yml
rules/: .last_commit
src/: bangumi.rs  config.rs  core.rs  engine.rs  http_client.rs  main.rs  types.rs  updater.rs  xpath_to_css.rs
static/: index.html
