[package]
name = "anime-search-api"
version = "0.1.0"
edition = "2021"
description = "在线动漫聚合搜索后端 - Rust + Axum"
license = "MIT"
authors = ["Asuna"]
repository = "https://github.com/AdingApkgg/anime-search-api"

[dependencies]
# Web 框架
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP 客户端
reqwest = { version = "0.13", features = ["json", "gzip", "brotli", "form"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTML 解析 (纯 Rust，无系统依赖)
scraper = "0.25"
regex = "1"

# URL 处理
url = "2"
urlencoding = "2"

# SSE 流
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"

# 异步 trait
async-trait = "0.1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 工具
thiserror = "2"
anyhow = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
